clusters/talos-proxmox-cluster/kube-system/cilium/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: http-1
    hostname: "*.novodigital.ru"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: http-2
    hostname: "novodigital.ru"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
